--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -15,9 +15,9 @@
         <%= form.text_area :body, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
     </div>
 
-    <div>
-        <%= form.label :published_at %>
-        <%= form.datetime_select :published_at %>
+    <div class="mb-4">
+        <%= form.label :published_at, class: "block text-gray-700 text-sm font-bold mb-2" %>
+        <%= form.datetime_select :published_at, include_blank: true, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
     </div>
 
     <div>
